[package]
name = "cyphercdc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"]}
tokio-postgres = "0.7.13"
postgres = "0.19.10"
rand = "0.9.2"
hex = "0.4.3"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
dotenv = "0.15.0"
once_cell = "1.21.3"